<resources>
    <string name="app_name">CareMe</string>
    <string name="title_welcome_page">Discover Your Perfect Skincare Solution</string>
    <string name="dashboard">Welcome to CareMe</string>
    <string name="our_service">Our Services</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="scan">Skin Detection</string>
    <string name="result">Result</string>
    <string name="history">History</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Picture Not Found!</string>
    <string name="nama_produk">Product Name</string>
    <string name="careme_logo">CareMe Logo</string>
    <string name="deskripsi">deskripsi</string>
    <string name="recommendation">Recommendation</string>
    <string name="additional">Educational Content</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="dont_have_acc">Don\'t have an account? Register</string>
    <string name="password_8_character">Password must not be less than 8 characters</string>
    <string name="name_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="failed_register">Failed to register account</string>
    <string name="failed_login">Failed to login</string>
    <string name="analyze_again">Analyze again?</string>
    <string name="retry">Try again</string>
    <string name="timeout">Timeout</string>
    <string name="logout_text">Logout</string>
</resources>